remove double title and edits

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="accv-2016-tutorial-on--digital-geometry-processing" class="anchor" href="#accv-2016-tutorial-on--digital-geometry-processing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ACPR 2019 Tutorial on Digital Geometry in Pattern Recognition</h1>
 
 
 
@@ -131,10 +129,10 @@ proposed in the Image Processing On Line journal.
 
   <h3>First Part 14h00 - 15:30 </h3>
   <ul>
-    <li>Introduction to digital geometry and the DGtal library</li>      
+    <li>Introduction to digital geometry and the <a href="http://dgtal.org">DGtal</a> library</li>      
     <ul>
-      <li> Digital Geometry introduction.</li>
-      <li> Global presentation of the DGtal Library.</li>
+      <li> Digital geometry introduction.</li>
+      <li> Global presentation of the <a href="http://dgtal.org">DGtal</a> Library.</li>
       <li> Overview of the main packages (base, kernel, topology, geometry). </li>
       <li> Simple example of use with the extraction of level contours of an image.</li>
     </ul>
