--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ proposed in the Image Processing On Line journal.
         Board</a> and was at the initiative of the first workshop on
         Reproducible Research in Pattern Recognition in 2016. Since
         2017, he chairs the
-        <a href="www.tc18.org">Technical Committee 18</a>x "Discrete
+        <a href="www.tc18.org">Technical Committee 18</a> "Discrete
         Geometry" of IAPR.  He has written about 40 papers in
         international journals or conferences on these topics. He
         actively contributes to <a href="www.dgtal.org" > <a href="http://dgtal.org">DGtal</a>
