--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ proposed in the Image Processing On Line journal.
     </ul>
     <li>Highlighting Reproducible Research</li>
     <ul>
-      <li> Valuation of implementation in RR journal (<a href="www.ipol.im">IPOL</a>) </li>
+      <li> Valuation of implementation in RR journal (<a href="http://www.ipol.im">IPOL</a>) </li>
       <li> Preview of the new online demonstration (demo generation) </li>
     </ul>
   
