--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ the use of the {\dgtal} library will be embedded in a
 web browser. In the continuity and complement of this online notebook,
 we will propose to the audience to construct its own online
 demonstration by using the new automatic demonstration kernel recently
-proposed in the Image Processing On Line journal.
+proposed in the <a href="http://www.ipol.im">Image Processing On Line journal</a>.
 </p>
 
 
@@ -113,8 +113,8 @@ proposed in the Image Processing On Line journal.
         Board</a> and was at the initiative of the first workshop on
         Reproducible Research in Pattern Recognition in 2016. Since
         2017, he chairs the
-        <a href="www.tc18.org">Technical Committee 18</a> "Discrete
-        Geometry" of IAPR.  He has written about 40 papers in
+        <a href="http://www.tc18.org"> Technical Committee TC 18 </a> "Discrete
+        Geometry and Mathematical Morphology" of IAPR.  He has written about 40 papers in
         international journals or conferences on these topics. He
         actively contributes to <a href="www.dgtal.org" > <a href="http://dgtal.org">DGtal</a>
         library</a> and he is the manager of the <a href="https://github.com/DGtal-team/DGtalTools">DGtalTools</a>
