update program part 1

--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@ proposed in the <a href="http://www.ipol.im">Image Processing On Line journal</a
 
   <h3>First Part 14h00 - 15:30 </h3>
   <ul>
-    <li>Introduction to digital geometry and the <a href="http://dgtal.org">DGtal</a> library</li>      
+    <li>1. Digital Geometry: Motivation, Theory and Applications</li>      
+    <li>2. Geometry with Digital Straight lines </li>
     <ul>
-      <li> Digital geometry introduction.</li>
-      <li> Global presentation of the <a href="http://dgtal.org">DGtal</a> Library.</li>
-      <li> Overview of the main packages (base, kernel, topology, geometry). </li>
-      <li> Simple example of use with the extraction of level contours of an image.</li>
+      <li> 2.1 Main idea of DSS recognition algorithms </li>
+      <li> 2.2 Adaptation to noise  </li>
+      <li> 2.3 Applications of DSS </li>
     </ul>
-    <li> Robust geometric estimators </li>
+    <li>3. Presentation of the DGtal Library </li>
     <ul>
-      <li> Extraction of geometric features robust to noise (tangent curvature)  </li>
-      <li> Multi-grid convergence and theoritical basis.  </li>
-      <li> Impletation using DGtal librabry (with exercice). </li>
+      <li>3.1 Short presentation of the library </li>
+      <li>3.2 Extracting level sets contours with DGtal  </li>
+      <li>3.3 Example of geometric estimator  </li>
     </ul>
-    
+    <li>4. Practical session: Hands on DGtal </li>
   </ul>
 
   <h3>Cofee Break (15h30 - 16h00)  </h3>
