--- a/index.html
+++ b/index.html
@@ -148,16 +148,14 @@ proposed in the <a href="http://www.ipol.im">Image Processing On Line journal</a
   <h3>Cofee Break (15h30 - 16h00)  </h3>
   <h3>Second Part 16h00 - 17:30 </h3>
   <ul>
-    <li> Applications and Reproducible Research</li>
+    <li> 1. Digital Surfaces</li>
+    <li> 2. Discrete Exterior Calculus </li>
+    <li> 3. Reproducible Research </li>
+    
     <ul>
-      <li>Introduction </li>
-      <li>Rapid overview of the <i><a href="https://github.com/DGtal-team/DGtalTools"> DGtalTools </a></i> and <i><a href="https://github.com/DGtal-team/DGtalTools-contrib">DGtalTools-Contrib</a></i> projects</li>
-      <li>Using <a href="http://dgtal.org">DGtal</a> in Jupyter notebook.
-    </ul>
-    <li>Highlighting Reproducible Research</li>
-    <ul>
-      <li> Valuation of implementation in RR journal (<a href="http://www.ipol.im">IPOL</a>) </li>
-      <li> Preview of the new online demonstration (demo generation) </li>
+      <li> 3.1 (short) Introduction to Reproducible Research. </li>
+      <li> 3.2 Rapid overview of the RR platforms.</li>
+      <li> 3.3 New ways of publications.</li>
     </ul>
   
 
