--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@ proposed in the <a href="http://www.ipol.im">Image Processing On Line journal</a
       <li> 3.2 Rapid overview of the RR platforms.</li>
       <li> 3.3 New ways of publications.</li>
     </ul>
-  
-
-
+    <li>4. Practical session: hands on the IPOL Demonstration System </li>
 
   
       <footer class="site-footer">
